--- a/sections/participantAbstracts.tex
+++ b/sections/participantAbstracts.tex
@@ -91,7 +91,7 @@ scheme that allows us to extract momentum correlation functions up
 to third order.
 I will present recent measurements on momentum correlations between three independently prepared, identical fermions. The observed
 correlations are purely induced by quantum statistics and are a consequence of the particles’ indistinguishability. We measure and analyze
-two and three-body density correlations after time-of-ﬂight and fnd
+two and three-body density correlations after time-of-light and fnd
 that even non-interacting, identical fermions exhibit intrinsic threebody correlations that cannot be predicted from measured two-body
 correlation functions.\par\end{minipage}
 
@@ -206,7 +206,7 @@ https://doi.org/10.1088/1361-6455/aa92e6\par\end{minipage}
 
 \noindent Previous works have shown a correlation between the elemental ratio of Lithium and Magnesium in the aragonite skeleton of corals and the ambient sea water temperature during their growth period. However, the underlying systematics of this proxy are lacking.
 Using a 193nm laser ablation system with a two volume cell coupled to an inductively coupled plasma quadrupole mass spectrometer (ICP-Q-MS) we resolved variations of Li and Mg in the skeleton on a structural level. Different possible treatments of the ablation data are presented as well as the resulting elemental maps. Results indicate a variability of Li/Mg in the coral skeleton of up to 50\%, which occurs most likely on the structural growth banding, i.e. the different types of aragonite (centres of calcification and fibres). This observation has important implications
-for the use of this temperature proxy. A difference in the elemental ratio of 50\% corresponds to a temperature change of 8◦C. Hence, a reassessment of selected dissolution measurement data is conducted to evaluate the robustness of the proxy results.
+for the use of this temperature proxy. A difference in the elemental ratio of 50\% corresponds to a temperature change of 8C. Hence, a reassessment of selected dissolution measurement data is conducted to evaluate the robustness of the proxy results.
 Laser ablation therefore offers a preferred tool for high resolution mapping of elemental ratios in coral skeletons to improve the understanding of proxy behaviour.\par\end{minipage}
 
 \hfill 
@@ -558,7 +558,7 @@ Starting from a first measurement of the self-energy of the polaron by radio-fre
 
 {\noindent Research subject: Fundamental Interactions and Cosmology\par}\medskip
 
-\noindent Particle therapy offers an enhancement of biological damage to deep-seated solid tumors and a superior normal tissue sparing over conventional modalities, with the choice of particle governing biophysical properties apt for certain diagnoses and treatment delivery techniques. For protons, clinical treatment planning assumes a constant relative biological effectiveness (RBE) of 1.1, a conservative estimate, while for carbon, more intricate models are implemented providing multi-dimensional variability of RBE. Prior to the anticipated helium (4He) ion-beam treatment program at the Heidelberg Ion Beam Therapy Center (HIT), we set out to investigate physical and biological phenomena of 4-He ion-beams as well as various aspects of the associated models for potential clinical integration. FLUKA Monte Carlo (MC) simulations, incorporating a detailed geometry of the HIT beam-line, were validated against measurements. Furthermore, three 4-He RBE models are assessed in silico and in vitro for various simple (homogenous) and complex (patient-like) clinical scenarios, indicating clinically relevant uncertainty of ±5-10\%. Lastly, a GPU-based treatment planning system was devised (FRoG), marking an important step towards translation of 4-He ion-beams.\par\end{minipage}
+\noindent Particle therapy offers an enhancement of biological damage to deep-seated solid tumors and a superior normal tissue sparing over conventional modalities, with the choice of particle governing biophysical properties apt for certain diagnoses and treatment delivery techniques. For protons, clinical treatment planning assumes a constant relative biological effectiveness (RBE) of 1.1, a conservative estimate, while for carbon, more intricate models are implemented providing multi-dimensional variability of RBE. Prior to the anticipated helium (4He) ion-beam treatment program at the Heidelberg Ion Beam Therapy Center (HIT), we set out to investigate physical and biological phenomena of 4-He ion-beams as well as various aspects of the associated models for potential clinical integration. FLUKA Monte Carlo (MC) simulations, incorporating a detailed geometry of the HIT beam-line, were validated against measurements. Furthermore, three 4-He RBE models are assessed in silico and in vitro for various simple (homogenous) and complex (patient-like) clinical scenarios, indicating clinically relevant uncertainty of $\pm$5-10\%. Lastly, a GPU-based treatment planning system was devised (FRoG), marking an important step towards translation of 4-He ion-beams.\par\end{minipage}
 
 \hfill 
 
@@ -648,7 +648,7 @@ I present the analysis of more than 9 years data of Fermi-LAT on a sample of 16 
 
 {\noindent Research subject: Fundamental Interactions and Cosmology\par}\medskip
 
-\noindent This work gathers data from the Hubble expansion rate, the quantity fsigma8 from redshift space distortions and the statistic Eg from clustering and lensing observables to construct a model independent estimation of the linear anisotropic stress parameter, η. An estimated value different from unity (the expected value for the standard model) suggests a modification of gravity, namely a non perfect fluid for dark matter. We used three different reconstruction methods to assess the underlying model from data and therefore compute η obs. For the redshift values of z = 0.29, 0.58, 0.86 and using the polynomial regression method, we find, respectively, η obs = 0.57 ± 1.05, η obs = 0.48 ± 0.96, and η obs = −0.11 ± 3.21. We find that all three methods are compatible within 2-sigma level and that the polynomial regression is compatible with the standard gravity scenario, while the two other methods show some tension with it.\par\end{minipage}
+\noindent This work gathers data from the Hubble expansion rate, the quantity fsigma8 from redshift space distortions and the statistic Eg from clustering and lensing observables to construct a model independent estimation of the linear anisotropic stress parameter, $\eta$. An estimated value different from unity (the expected value for the standard model) suggests a modification of gravity, namely a non perfect fluid for dark matter. We used three different reconstruction methods to assess the underlying model from data and therefore compute $\eta$ obs. For the redshift values of z = 0.29, 0.58, 0.86 and using the polynomial regression method, we find, respectively, $\eta$ obs = 0.57 $\pm$ 1.05, $\eta$ obs = 0.48 $\pm$ 0.96, and $\eta$ obs = -0.11 $\pm$ 3.21. We find that all three methods are compatible within 2-sigma level and that the polynomial regression is compatible with the standard gravity scenario, while the two other methods show some tension with it.\par\end{minipage}
 
 \hfill 
 
@@ -791,7 +791,7 @@ As a test case, we create a population of systems with a host star mass of 0.1 s
 
 {\noindent Research subject: Mathematical Physics\par}\medskip
 
-\noindent High-frequency electron paramagnetic resonance (HF-EPR) studies on the low-spin (i.e., S = 1/2) Co(\Romannum{2})-complexes Co(\Romannum{2})-vOh and Co(\Romannum{2})-TBP are reported. The loose powder EPR-spectra show two paramagnetic resonance lines for both Co(\Romannum{2})-vOh $(g_{1} = 2.26, g_{2} = 2.06)$ and Co(\Romannum{2})-TBP compound $(g_{1} = 2.33, g_{2} = 2.26)$, respectively. For the latter, a forbidden transition is observed which effective g-factor of  4.80 implies \Delta m = 2. In fixed powders, an additional line appears in Co(\Romannum{2})-TBP which is associated with the g-factor of 1.99. The temperature dependence of the line width of Co(\Romannum{2})-TBP decreases upon heating to around 0.05T. The potential of the materials for realising a quantum bit (q-bit) material is discussed. \par\end{minipage}
+\noindent High-frequency electron paramagnetic resonance (HF-EPR) studies on the low-spin (i.e., S = 1/2) Co(\Romannum{2})-complexes Co(\Romannum{2})-vOh and Co(\Romannum{2})-TBP are reported. The loose powder EPR-spectra show two paramagnetic resonance lines for both Co(\Romannum{2})-vOh $(g_{1} = 2.26, g_{2} = 2.06)$ and Co(\Romannum{2})-TBP compound $(g_{1} = 2.33, g_{2} = 2.26)$, respectively. For the latter, a forbidden transition is observed which effective g-factor of  4.80 implies $\Delta$ m = 2. In fixed powders, an additional line appears in Co(\Romannum{2})-TBP which is associated with the g-factor of 1.99. The temperature dependence of the line width of Co(\Romannum{2})-TBP decreases upon heating to around 0.05T. The potential of the materials for realising a quantum bit (q-bit) material is discussed. \par\end{minipage}
 
 \hfill 
 
@@ -807,7 +807,7 @@ As a test case, we create a population of systems with a host star mass of 0.1 s
 
 {\noindent Research subject: Astronomy and Cosmic Physics\par}\medskip
 
-\noindent For the understanding of exoplanets it is vital to determine accurate and precise stellar parameters of their host stars. We derived stellar parameters for 372 giants from the Lick planet search (Frink et al., 2001) by comparing spectroscopic, astrometric and photometric observables to grids of evolutionary models using Bayesian inference (Stock et al., to be submitted). In particular our method is able to provide probabilities for the current post-main sequence evolutionary stage (horizontal branch vs. red-giant branch). We find very good agreement between our stellar parameters and literature values. Some studies have questioned the reliability of stellar masses determined from evolutionary models, e.g., Schlaufman \& Winn (2013). We used a sample of 26 giants with asteroseismic masses MA and Bayesian masses based on evolutionary tracks  ME and find no evidence for large systematic differences (ME−MA〉=0.04±0.22 M☉). We tested the reliability of our methodology to predict the evolutionary stage by using 1012 giants in the Kepler field with asteroseismically determined evolutionary stages and find an agreement for 86\% of the stars. We find that 15 of the 16 (94\%)  planet host stars of the Lick sample are more likely horizontal branch stars, while the fraction of horizontal branch stars in the full sample is 81\%.\par\end{minipage}
+\noindent For the understanding of exoplanets it is vital to determine accurate and precise stellar parameters of their host stars. We derived stellar parameters for 372 giants from the Lick planet search (Frink et al., 2001) by comparing spectroscopic, astrometric and photometric observables to grids of evolutionary models using Bayesian inference (Stock et al., to be submitted). In particular our method is able to provide probabilities for the current post-main sequence evolutionary stage (horizontal branch vs. red-giant branch). We find very good agreement between our stellar parameters and literature values. Some studies have questioned the reliability of stellar masses determined from evolutionary models, e.g., Schlaufman \& Winn (2013). We used a sample of 26 giants with asteroseismic masses MA and Bayesian masses based on evolutionary tracks  ME and find no evidence for large systematic differences (ME-MA==$0.04\pm0.22$ M). We tested the reliability of our methodology to predict the evolutionary stage by using 1012 giants in the Kepler field with asteroseismically determined evolutionary stages and find an agreement for 86\% of the stars. We find that 15 of the 16 (94\%)  planet host stars of the Lick sample are more likely horizontal branch stars, while the fraction of horizontal branch stars in the full sample is 81\%.\par\end{minipage}
 
 \hfill 
 
