--- a/sections/speakerAbstracts.tex
+++ b/sections/speakerAbstracts.tex
@@ -1,5 +1,5 @@
 
-\section*{Lecture Abstracts}
+\section{Lecture Abstracts}
 
 \begin{center}
 {{\large\bfseries Building Planets - A Journey along 40 Orders of Magnitude}\par} \medskip
@@ -107,7 +107,7 @@ TBA
 {\large Joao Seco, German Cancer Research Center, Heidelberg\par}
 \end{center}
 
-Medical physics (also called biomedical physics, medical biophysics or applied physics in medicine) is, generally speaking, the application of physics concepts, theories and methods to medicine or healthcare. There are 4 main areas of medical physics specialty 1) radiation therapeutic physics, 2) medical imaging physics, 3) nuclear medicine physics and 4) health physics, which cover more than 90\% of all medical physics activities. Radiation therapeutic physicists work primarily in radiation oncology hospital departments, which specialize in cancer care. Radiation therapy (RT) is the most common treatment for cancer, being used in approximately 70\% of all cancers either alone or combined with surgery or chemotherapy. It uses high-energy particles or waves, such as x-rays, gamma rays, electron beams, protons, carbon ions, to \enquote{kill} or \enquote{damage} cancer cells. ​
+Medical physics (also called biomedical physics, medical biophysics or applied physics in medicine) is, generally speaking, the application of physics concepts, theories and methods to medicine or healthcare. There are 4 main areas of medical physics specialty 1) radiation therapeutic physics, 2) medical imaging physics, 3) nuclear medicine physics and 4) health physics, which cover more than 90\% of all medical physics activities. Radiation therapeutic physicists work primarily in radiation oncology hospital departments, which specialize in cancer care. Radiation therapy (RT) is the most common treatment for cancer, being used in approximately 70\% of all cancers either alone or combined with surgery or chemotherapy. It uses high-energy particles or waves, such as x-rays, gamma rays, electron beams, protons, carbon ions, to kill or damage cancer cells.
 \\
 The first talk will give an overview of the physics behind radiation therapy. Starting from the first treatment of cancer done very early after the discovery of X-rays in 1895, to the technological developments in particle accelerators that permit modern day treatments with radiation and finally describing the impact of imaging, such as computed tomography (CT) and magnetic resonance imaging (MRI), in daily radiation therapy.
 \\
