fix section titles

--- a/sections/speakerAbstracts.tex
+++ b/sections/speakerAbstracts.tex
@@ -1,5 +1,5 @@
 
-\section{Lecture Abstracts}
+\section*{Lecture Abstracts}
 
 \begin{center}
 {{\large\bfseries Building Planets - A Journey along 40 Orders of Magnitude}\par} \medskip
