--- a/sections/survey.tex
+++ b/sections/survey.tex
@@ -1,4 +1,4 @@
-\section{Results of the Feedback Survey}
+\section*{Results of the Feedback Survey}
 After the winterschool, a feedback survey was done to ask for the general impression of the participants of the winterschool and to get information on things that should be changed and on things that should remain. 34 persons answered the questionnaire. All of the answering persons agreed or strongly agreed on the statement "I enjoyed the winterschool". Almost all considered the winterschool to be well organized and that they felt well informed prior to the winterschool. The overnight-travelling was found to be not optimal by 6 persons, 5 were neutral and the remaining 23 preferred overnight traveling to traveling during the next day. 
 \textbf{Hotel}
 The rooms were found to be clean and comfortable, the food to be good and all dietary needs were met. There were no negative answers on the mentioned topics which gives a great feedback for the hotel itself. Only the combination of the overnight travel and the check-in at 3 p.m. was not optimal and we got several remarks on this. Nevertheless, this combination was cheaper than the during-the-day-travel and could make another spot for a participant.
