--- a/sections/text.tex
+++ b/sections/text.tex
@@ -99,6 +99,9 @@ with less organizing and no funding, but being appreciated just as well.
 
 \input{sections/participantAbstracts.tex}
 
+\input{sections/survey.tex}
+
+
 \section*{Final Remarks}
 In summary, the winter school was a great success. We are confident that the goals of the school were achieved, and the very positive feedback of students and lecturers strengthens this impression. The organizers are very thankful for the great organizational and financial support of the HGSFP for this event and we hope that the tradition of the winter school will be carried on in the future.
 
@@ -106,7 +109,7 @@ In summary, the winter school was a great success. We are confident that the goa
 
 
 \newpage
-\abstract
+\appendix
 \section*{A $\qquad$ Schedule of the HGSFP Winterschool 2018}
 
 \pdfbookmark{A Schedule}{label:appa}
@@ -114,8 +117,5 @@ In summary, the winter school was a great success. We are confident that the goa
 \centering
 \includegraphics[scale=0.66, angle = 90 ]{figures/Program.jpg}
 \end{figure}
-
-
-\section*{B $\qquad$ Evaluation}
 
 \newpage
