--- a/setup/preamble.tex
+++ b/setup/preamble.tex
@@ -23,13 +23,13 @@
 % your operating system and its default input
 % encoding. Typically, you should use
 %   Linux  : utf8 (most modern Linux distributions)
-%            latin1 
+%            latin1
 %   Windows: ansinew
 %            latin1 (works in most cases)
 %   Mac    : applemac
 % Notice that you can manually change the input
 % encoding of your files by selecting "save as"
-% an select the desired input encoding. 
+% an select the desired input encoding.
 
 \usepackage[utf8]{inputenc}
 % Make latex understand and use the typographic
@@ -68,7 +68,7 @@
 % http://en.wikibooks.org/wiki/LaTeX/Mathematics
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Defines new environments such as equation,
-% align and split 
+% align and split
 \usepackage{amsmath}
 % Adds new math symbols
 \usepackage{amssymb}
@@ -78,6 +78,7 @@
 \usepackage[framed,amsmath,thmmarks]{ntheorem}
 
 \usepackage{romannum}
+\usepackage{csquotes}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Page Layout
@@ -152,7 +153,7 @@
 % http://en.wikibooks.org/wiki/LaTeX/Hyperlinks
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Enable hyperlinks and insert info into the pdf
-% file. Hypperref should be loaded as one of the 
+% file. Hypperref should be loaded as one of the
 % last packages
 \usepackage{hyperref}
 \hypersetup{%
